# PA

./: .dockerignore  .env.example  .gitignore  .gitmodules  FUTURE_IMPROVEMENTS.md  LEAF_PA_Requirements.md  README.md  docker-compose.yml  dummy.csv  dummy2.csv  mcp_urls.txt  pyproject.toml  read_doc.py  start.ps1  start.sh  test_ingest.py
Conversation Summaries/: CONVERSATION_INDEX.md
docker_files/: hermes.Dockerfile
document_storage/: README.md
hermes_config/: SOUL.md
init/: init.sql  init_sqlite.sql
mcp_servers/document_catalog/: __init__.py  artifact_writer.py  audit.py  catalog.db  catalog_db.py  hashing.py  mime_detect.py  server.py  tool_audit.py  trace_enrichment.py  vault.py
mcp_servers/document_catalog/search/: __init__.py  (+6 more)
n8n_tools/: README.md
pa_mcp_servers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: bench_docling.py  check_hooks.py  cleanup_duplicates.py  debug_search.py  entrypoint.sh  reset_data.sh  setup_db.py  setup_dev.sh  sync_host_hermes_to_container.ps1  sync_host_hermes_to_container.sh  test_azure.py  test_embeddings.py  view_catalog.py
scripts/gmail-mcp/: gcp-oauth.keys.example.json
tests/: test_all_tools.py  test_ingest_e2e.py  test_phase4_integration.py
tests/unit/: test_artifact_writer.py  test_audit.py  test_catalog_db.py  test_chunker.py  test_csv_parser.py  test_extract_tool.py  test_faiss_index.py  test_fts_search.py  test_hashing.py  test_ingest_tool.py  test_list_tool.py  test_path_validation.py  test_report.py  test_review_tools.py  test_tool_audit.py  test_vault.py
tools/: db_viewer.py
(+43 files in other folders)
