[project]
name = "pa-mcp-servers"
version = "0.1.0"
description = "MCP servers for the Personal Assistant document intelligence stack"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "markitdown>=0.0.1",
    "docling>=2.0.0",
    "pdfplumber>=0.11.0",
    "openai>=1.0.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.8.0",
    "duckdb>=1.0.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
magic = [
    "python-magic>=0.4",
]

[tool.setuptools.packages.find]
include = ["mcp_servers*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
